welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:7: error: ';' expected but 'if' found.
}	 if ( b<=19 && b>=13) {
         ^